express/blocks/faqv2/faqv2.css
.section:has(.faqv2) {
    margin: 0 auto;
    padding-left: 20px;
    padding-right: 20px;
	max-width: 375px;
}

.faqv2-wrapper {
	margin: 0 auto 10px auto;
	box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
	border-radius: 8px;
	background: var(--color-white);
	width: 92%;
}

main .section .faqv2 {
	max-width: 540px;
}

.faqv2-accordion {
	height: 128px;
	margin-bottom: 4px;
	border-radius: 0px 8px 8px 0px;
	border-left: 4px solid #724CDC;
	background: #F8F8F8;
	padding: 16px;
	display: flex;
	flex-direction: column;
	justify-content: center;
}

.faqv2-accordion.short {
	height: 72px;
    padding: unset;
    margin-bottom: 8px;
}

.faqv2-accordion.short:last-child {
	margin-bottom: 50px;
}

.faqv2.bold-quote .faqv2-accordion .faqv2-header {
	font-size: 20px;
    font-weight: bold;
}

.section.section-wrapper:has(.faqv2.bold-quote),
.section.section-wrapper:has(.faqv2.quote-only) {
    padding-top: 0;
    margin-top: 0;
}

.faqv2 {
	position: relative;
	z-index: 1;
	width: 100%;
	height: auto;
}

.faqv2 .faqv2-accordion {
	margin-right: 15px;
}

.faqv2-header {
	font-size: 16px;
	font-style: normal;
	font-weight: 400;
	line-height: 24px;
	text-align: left;
	padding-left: 16px;
	color: #444444;
}

.faqv2-sub-header {
	margin-top: 10px;
	font-size: 14px;
	font-style: normal;
	font-weight: 700;
	line-height: 24px;
	text-align: left;
	padding-left: 16px;
	color: #505050;
}

.faqv2 .faqv2-toggle-btn {
	display: block;
	width: fit-content;
	margin: 15px 0 0 15px;
	text-align: left;
	text-decoration: none;
	border-radius: 18px;
	padding: 5px 1.2em 6px 1.2em;
	font-size: var(--body-font-size-s);
	font-weight: 600;
	line-height: var(--body-line-height);
	cursor: pointer;
	transition: background-color 0.3s, color 0.3s, border 0.3s;
	border-width: 2px;
	border-style: solid;
	overflow: hidden;
	text-overflow: ellipsis;
	color: var(--color-white);
	background-color: var(--color-info-accent);
	border-color: var(--color-info-accent);
}

.faqv2-accordion.expandable.header-accordion {
	height: 100%;
	border-radius: 8px;
	border: none;
	margin-bottom: 6px;
	background: white;
}

.faqv2-accordion.expandable.header-accordion.rounded-corners,
.faqv2-accordion.expandable.header-accordion {
	border-radius: 8px;
	margin-bottom: 0;
	background: linear-gradient(to bottom,
			#5C5CE0,
			#9C49C6,
			#BF38A5) left / 1% 100% no-repeat,
		white;
}

.faqv2-accordion.expandable.sub-header-accordion {
	height: 100%;
	border-radius: 0 0 8px 8px;
	padding-top: 0;
	border: none;
	display: none;
	margin-bottom: 6px;
	background: linear-gradient(to bottom,
			#D13381,
			#DE3E67,
			#EC5153,
			#F2693C,
			#F08420) left / 1% 100% no-repeat,
		white;
}

.faqv2-accordion.expandable.sub-header-accordion.collapsed {
	display: flex;
}

.faqv2-header.expandable {
	font-size: 16px;
	font-weight: 700;
	display: flex;
	justify-content: space-between;
	align-items: center;
	cursor: pointer;
	color: #242424;
	padding-left: 6px;
}

.faqv2-accordion.expandable .toggle-icon {
	width: 12px;
	height: 12px;
}

.faqv2-sub-header.expandable {
	font-size: 16px;
	font-weight: 400;
	margin-top: 0;
	padding-bottom: 10px;
	padding-left: 6px;
}

.faqv2-accordion.title {
	font-size: 22px;
	font-weight: 800;
	margin: 20px 0 10px 0;
	padding-left: 0;
	height: 50px;
	border: none;
	background: transparent;
	text-align: center;
}

.section.faqv2-grey-bg {
	background-color: #E8E8E8;
}

.section.faqv2-section-padding {
	padding-top: 10px;
	padding-bottom: 50px;
}

.section .faqv2-background {
	position: absolute;
	top: 0;
	left: 0;
	right: 0;
	width: 100%;
	height: 100%;
	z-index: 0;
	margin: 0;
	max-width: none;
}

.section .faqv2-background img {
	position: fixed;
	top: 50%;
	left: 50%;
	object-fit: cover;
	transform: translate(-50%, -50%);
	width: 100%;
	height: 100%;
	max-width: none;
}

@media (min-width: 400px) {
	.faqv2-header {
		font-size: 18px;
		font-weight: 400;
	}

	.faqv2-sub-header {
		font-size: 18px;
		font-weight: 700;
		line-height: 24px;
	}

	.faqv2.small .faqv2-accordion {
		height: 78px;
	}

	.faqv2-accordion {
		height: 128px;
		margin-bottom: 4px;
		border-radius: 0px 8px 8px 0px;
		border-left: 4px solid #724CDC;
		background: #F8F8F8;
		padding: 16px;
		display: flex;
		flex-direction: column;
		justify-content: center;
	}

	.faqv2-accordion.collapsed {
		display: none;
	}

	.faqv2-toggle-btn {
		display: block;
		width: fit-content;
		margin: 10px 0 0 0;
		margin-left: 0;
		text-align: left;
		text-decoration: none;
		border-radius: 18px;
		padding: 5px 1.2em 6px 1.2em;
		font-size: var(--body-font-size-s);
		font-weight: 600;
		line-height: var(--body-line-height);
		cursor: pointer;
		transition: background-color 0.3s, color 0.3s, border 0.3s;
		border-width: 2px;
		border-style: solid;
		overflow: hidden;
		text-overflow: ellipsis;
		color: var(--color-white);
		background-color: var(--color-info-accent);
		border-color: var(--color-info-accent);
	}
}

@media (min-width: 600px) {
	.faqv2-wrapper {
		width: unset;
	}
}

@media (min-width: 900px) {
	.faqv2 {
		width: 648px;
		margin: auto;
	}

	.faqv2 .faqv2-accordion {
		margin-left: 0;
		margin-right: 0;
	}

	.faqv2 .faqv2-toggle-btn {
		width: 65px;
		height: 24px;
		line-height: 24px;
		margin-left: 0;
	}

	.faqv2.longform {
		display: flex;
		flex-direction: row;
		align-items: center;
		width: 100%;
		padding: 30px 10px;
	}

	.faqv2.longform .faqv2-longform-header-container {
		flex: 0 0 50%;
		max-width: 50%;
		align-items: center;
		justify-content: center;
	}

	.faqv2.longform .faqv2-accordions-col {
		flex: 0 0 50%;
		max-width: 50%;
		display: flex;
		flex-direction: column;
	}

	.faqv2.longform .faqv2-wrapper {
		margin: 0;
		box-shadow: none;
		border-radius: 0;
		background: none;
		width: auto;
		border-top: 1px solid #8F8F8F;
	}

	.faqv2.longform .faqv2-wrapper:first-child {
		border-top: none;
	}

	.faqv2.longform .faqv2-accordion.title {
		flex: 0 0 25%;
		margin-right: 24px;
	}

	.faqv2.longform .faqv2-accordions-col {
		flex: 1;
		display: flex;
		flex-direction: column;
	}

	.faqv2.longform .faqv2-accordion.expandable.sub-header-accordion {
		border-radius: 0;
		background: transparent;
		margin-bottom: 0;
	}

	.faqv2.longform .faqv2-accordion.expandable.header-accordion {
		height: 100%;
		border-radius: 0;
		margin-bottom: 0;
		background: transparent;
	}

	main .longform {
		border-radius: 16px;
	}

	.longform .faqv2-background {
		background-color: white;
		box-shadow:
			0 4px 6px rgba(0, 0, 0, 0.16),
			0 -2px 4px rgba(0, 0, 0, 0.08);
		border-radius: 16px;
	}

	.longform.faqv2-section-padding {
		margin-left: 30px;
		margin-right: 30px;
	}

	.faqv2.longform .faqv2-longform-header-container h2.faqv2-accordion.title {
		font-size: 38px;
	}

	.faqv2.longform .faqv2-header.expandable {
		font-size: 22px;
	}
}

